[package]
authors = ["Louis Acresti <louis.acresti@gmail.com>"]
edition = "2018"
name = "nessers"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coffee = {version = "0.4.1", features = ["vulkan"]}
lazy_static = "1.4.0"
maplit = "1.0.2"
# Copied directly from Cargo.lock - is there a way to reference
# sub-dependencies, or auto-resolve a version based on what's in Cargo.lock?
image = "0.21.3"
rand = "0.7.3"

[patch.crates-io]
coffee = {git = "https://github.com/namuol/coffee", rev = "cfc18d8cae128b6f22087872ab37ba152c9dc55e"}

# [profile.dev]
# opt-level = 2
