[package]
authors = ["Louis Acresti <louis.acresti@gmail.com>"]
edition = "2021"
name = "nessers"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# coffee = {version = "0.4.1", features = ["vulkan"]}
cpal = "0.13.5"
docopt = "1.1.1"
egui = "0.17"
egui-winit = {version = "0.17"}
egui_memory_editor = {path = "../egui_memory_editor"}
egui_wgpu_backend = "0.17"
env_logger = "0.9"
lazy_static = "1.4.0"
log = "0.4"
maplit = "1.0.2"
pixels = "0.9.0"
serde = "1.0.137"
winit = "0.26"
winit_input_helper = "0.12"

# Copied directly from Cargo.lock - is there a way to reference
# sub-dependencies, or auto-resolve a version based on what's in Cargo.lock?
image = "0.21.3"
rand = "0.7.3"

[dev-dependencies]
pretty_assertions = "1.2.1"

# [patch.crates-io]
# coffee = {git = "https://github.com/namuol/coffee", rev = "cfc18d8cae128b6f22087872ab37ba152c9dc55e"}

[profile.dev]
opt-level = 2
